# FM5151

./: .gitignore  amortization.csv  lab01.ipynb
blackjack/: pyproject.toml
blackjack/src/blackjack/: __init__.py  dealer.py  deck.py  gambler.py  game.py  hand.py
blackjack/src/blackjack.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
blackjack/tests/: test_card.py  test_deck.py  test_game.py  test_hand.py  test_player.py
hw1/: amortization_test.csv  example_exact_pay.csv  example_high_pay.csv  example_low_pay.csv  hw1questions.ipynb  mortgage.py  root.py
hw2/: hw2.ipynb
intro_project/: market.csv  metrics.csv  metrics.py  metrics_expected.csv  returns.py  returns_expected.csv
lab 4/: README.md
lab 4/src/blackjack/: app.py  card.py  strategy.py
lab2/: test_root.py
lab3/: mc.ipynb
systrade/: .gitignore  pyproject.toml
systrade/example/: buyhold.ipynb
systrade/src/systrade/: broker.py  debug.py  engine.py  feed.py  portfolio.py  position.py  systrade.ipynb
systrade/tests/: test_feed.py
week3/: mc.ipynb
week5/: oop.ipynb
week5/exec/: app.py  app_cmd1.py  app_cmd2.py  app_env1.py  app_env2.py  app_file.py  cfg.json
week5/tests/: test_trade.py  trade.py
