[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "blackjack"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
blackjack = "blackjack:app.main"

[project.optional-dependencies]
test = ["pytest~=8.4.2", "pytest-cov~=7.0.0"]


[tool.setuptools.packages.find]
where = ["src"]
