[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "systrade"
version = "0.0.1"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2,<3",
    "pandas>=2,<3"
]

[project.optional-dependencies]
test = ["pytest~=8.4.2", "pytest-cov~=7.0.0"]

[tool.setuptools.packages.find]
where = ["src"]
